--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,12 +1,20 @@
+:root {
+  --color-theme-background-1: #1c1d30;
+  --color-theme-background-2: #292942;
+  --color-theme-text-color-1: rgba(255, 255, 255, 0.8);
+  --color-theme-text-color-2: rgba(255, 255, 255, 1);
+  --color-theme-accent-1: #59cecf;
+}
+
 html, body {
 	height: 100%;
 	width: 100%;
 	padding: 0;
 	margin: 0;
-	background: #FAFAFA;
-	font-family: 'Helvetica Neue', arial, sans-serif;
+	background: var(--color-theme-background-1);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	font-weight: 400;
-	color: #444;
+	color: var(--color-theme-text-color-1);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
