--- a/src/components/Calculator/Calculator.css
+++ b/src/components/Calculator/Calculator.css
@@ -1,3 +1,24 @@
-.Calculator {
+.calculator {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.calculatorBody {
+  flex: 1 1 auto;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.calculatorBodyWrapper {
+  overflow: auto;
   padding: 20px;
+}
+
+.calculatorFooter {
+  padding: 20px;
+  background: var(--color-theme-background-2);
 }
