--- a/src/components/Calculator/EditableRow.css
+++ b/src/components/Calculator/EditableRow.css
@@ -1,10 +1,15 @@
 .input {
   width: 100%;
   height: 48px;
+  line-height: 48px;
   background: transparent;
   border: none;
-  color: var(--color-theme-text-color-2);
-  font-size: 36px;
+  color: var(--color-theme-text-color-1);
+  font-size: 32px;
+}
+
+.input::placeholder {
+  color: var(--color-theme-text-color-3);
 }
 
 .input:focus {
