--- a/src/components/Calculator/Rows.css
+++ b/src/components/Calculator/Rows.css
@@ -3,5 +3,22 @@
 
 .rowItem {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 8px 20px;
+}
+.rowItem:nth-child(odd) {
+  background-color: rgba(255, 255, 255, 0.02);
+}
+
+.rowItemValue {
+  font-size: 16px;
+  line-height: 24px;
+  color: var(--color-theme-text-color-2);
+}
+
+.rowItemResult {
+  font-size: 20px;
+  line-height: 32px;
+  color: var(--color-theme-accent-1);
 }
