refactor colors for theme

--- a/src/components/Calculator/Calculator.css
+++ b/src/components/Calculator/Calculator.css
@@ -19,5 +19,6 @@
 
 .calculatorFooter {
   padding: 20px;
-  background: var(--color-theme-background-2);
+  background: var(--app-calc-footer-background);
+  box-shadow: var(--shadow-level-1);
 }
