--- a/src/components/Calculator/EditableRow.css
+++ b/src/components/Calculator/EditableRow.css
@@ -4,12 +4,12 @@
   line-height: 48px;
   background: transparent;
   border: none;
-  color: var(--color-theme-text-color-1);
+  color: var(--app-calc-footer-color);
   font-size: 32px;
 }
 
 .input::placeholder {
-  color: var(--color-theme-text-color-3);
+  color: var(--app-color-muted);
 }
 
 .input:focus {
